--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -1,51 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".activity.ChangePasswordActivity">
-    <TextView
-        android:layout_width="match_parent"
-        android:text="修改密码"
-        android:textSize="18sp"
-        android:background="@color/text_press"
-        android:textColor="@color/white"
-        android:gravity="center"
-        android:layout_height="48dp" />
+    android:layout_height="match_parent">
+    <include android:layout_width="match_parent" android:layout_height="48dp" layout="@layout/head_title"/>
     <EditText
         android:layout_width="match_parent"
         android:id="@+id/oldPassword"
-        android:textSize="18sp"
-        android:textColor="@color/fragment_my_textcolor"
-        android:hint="原密码"
-        android:padding="10dp"
+        android:textSize="14sp"
+        android:hint="请输入原始密码"
+        android:paddingTop="14dp"
+        android:paddingLeft="25dp"
+        android:paddingBottom="14dp"
+        android:singleLine="true"
+        android:textColor="#2699fb"
+        android:textColorHint="#cccccc"
+        android:background="@drawable/shap_my_bg"
+        android:layout_marginLeft="33dp"
+        android:layout_marginRight="33dp"
+        android:layout_marginTop="70dp"
         android:layout_height="wrap_content" />
     <EditText
         android:layout_width="match_parent"
         android:id="@+id/newPassword"
-        android:textSize="18sp"
-        android:textColor="@color/fragment_my_textcolor"
-        android:hint="x新密码"
-        android:padding="10dp"
+        android:textSize="14sp"
+        android:hint="请输入新密码"
+        android:paddingTop="14dp"
+        android:paddingLeft="25dp"
+        android:paddingBottom="14dp"
+        android:singleLine="true"
+        android:textColor="#2699fb"
+        android:textColorHint="#cccccc"
+        android:background="@drawable/shap_my_bg"
+        android:layout_marginLeft="33dp"
+        android:layout_marginRight="33dp"
+        android:layout_marginTop="24dp"
         android:layout_height="wrap_content" />
     <EditText
         android:layout_width="match_parent"
         android:id="@+id/confirmPassword"
-        android:textSize="18sp"
-        android:textColor="@color/fragment_my_textcolor"
-        android:hint="确认密码"
-        android:padding="10dp"
+        android:textSize="14sp"
+        android:hint="请输入确认密码"
+        android:paddingTop="14dp"
+        android:paddingLeft="25dp"
+        android:paddingBottom="14dp"
+        android:singleLine="true"
+        android:textColor="#2699fb"
+        android:textColorHint="#cccccc"
+        android:background="@drawable/shap_my_bg"
+        android:layout_marginLeft="33dp"
+        android:layout_marginRight="33dp"
+        android:layout_marginTop="24dp"
         android:layout_height="wrap_content" />
+
     <Button
         android:layout_width="match_parent"
         android:id="@+id/determine"
-        android:textSize="18sp"
+        android:textSize="14sp"
         android:textColor="@color/white"
         android:text="确定"
-        android:background="#0F83F4"
-        android:padding="10dp"
+        android:background="@drawable/shap_my_btn_bg"
+        android:layout_marginLeft="33dp"
+        android:layout_marginRight="33dp"
+        android:layout_marginTop="120dp"
         android:layout_height="wrap_content" />
 
 </LinearLayout>
