--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,13 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
+<!-- 微信的底部是#F8F8F8 -->
     <RadioGroup
         android:id="@+id/rgRadioGroup"
         android:layout_width="match_parent"
-        android:layout_height="48dp"
+        android:layout_height="wrap_content"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
         android:layout_alignParentBottom="true"
-        android:background="@color/text_press"
+        android:background="#F8F8F8"
         android:orientation="horizontal">
 
         <RadioButton
@@ -25,7 +27,7 @@
             android:gravity="center"
             android:text="首页"
             android:textColor="@color/selector_bottom_text"
-            android:textSize="8sp" />
+            android:textSize="10sp" />
 
         <RadioButton
             android:id="@+id/rbAlarm"
@@ -39,7 +41,7 @@
             android:gravity="center"
             android:text="告警"
             android:textColor="@color/selector_bottom_text"
-            android:textSize="8sp" />
+            android:textSize="10sp" />
 
         <RadioButton
             android:id="@+id/rbStatus"
@@ -53,7 +55,7 @@
             android:drawableTop="@drawable/selector_status"
             android:drawablePadding="2dp"
             android:textColor="@color/selector_bottom_text"
-            android:textSize="8sp" />
+            android:textSize="10sp" />
 
         <RadioButton
             android:id="@+id/rbMy"
@@ -67,7 +69,7 @@
             android:drawablePadding="2dp"
             android:text="我的"
             android:textColor="@color/selector_bottom_text"
-            android:textSize="8sp" />
+            android:textSize="10sp" />
     </RadioGroup>
 
     <FrameLayout
