--- a/app/src/main/res/layout/fragment_alarm.xml
+++ b/app/src/main/res/layout/fragment_alarm.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/gb_gray"
     android:orientation="vertical">
     <RelativeLayout
         android:layout_width="match_parent"
@@ -72,7 +73,7 @@
         <RelativeLayout
             android:layout_alignParentBottom="true"
             android:layout_width="match_parent"
-            android:background="@color/gb_gray"
+            android:background="#ccc"
             android:layout_height="1dp">
             <View
                 android:id="@+id/scrollDivide"
