--- a/app/src/main/res/layout/fragment_cardview.xml
+++ b/app/src/main/res/layout/fragment_cardview.xml
@@ -7,38 +7,9 @@
     android:gravity="center_horizontal"
     android:background="@drawable/shap_status_bg"
     android:id="@+id/llComponent"
+    android:clipChildren="false"
     android:orientation="vertical">
 
-
-    <ImageView
-        android:layout_width="67dp"
-        android:src="@mipmap/ic_status_conditioning"
-        android:layout_marginTop="77dp"
-        android:id="@+id/ivCardViewLogo"
-        android:layout_height="82dp" />
-    <TextView
-        android:layout_width="wrap_content"
-        android:text="空调"
-        android:id="@+id/cardViewDeviceName"
-        android:textSize="23sp"
-        android:layout_marginTop="6dp"
-        android:textStyle="bold"
-        android:layout_height="wrap_content" />
-    <TextView
-        android:layout_width="wrap_content"
-        android:text="设备总数"
-        android:textSize="23sp"
-        android:textStyle="bold"
-        android:id="@+id/cardViewDeviceSumName"
-        android:layout_marginTop="44dp"
-        android:layout_height="wrap_content" />
-    <TextView
-        android:layout_width="wrap_content"
-        android:text="32"
-        android:id="@+id/cardViewDeviceSum"
-        android:textSize="77sp"
-        android:layout_marginTop="44dp"
-        android:layout_height="wrap_content" />
 
 
 
