--- a/app/src/main/res/layout/activity_fire.xml
+++ b/app/src/main/res/layout/activity_fire.xml
@@ -20,7 +20,7 @@
             android:layout_marginLeft="40dp"
             android:layout_marginTop="38dp"
             android:layout_marginBottom="38dp"
-            android:src="@mipmap/ic_access_logo" />
+            android:src="@mipmap/fire_smoking" />
         <TextView
             android:id="@+id/tvName"
             android:layout_width="wrap_content"
@@ -56,14 +56,16 @@
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="16dp"
-                android:text="关闭"
+                android:text="正常"
                 android:textColor="@color/count_green"
                 android:textSize="18sp"
                 android:textStyle="bold" />
         </LinearLayout>
     </RelativeLayout>
     <RelativeLayout
-        android:layout_margin="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"
         android:translationZ="6dp"
         android:layout_width="match_parent"
         android:layout_height="156dp"
@@ -75,7 +77,7 @@
             android:layout_marginLeft="40dp"
             android:layout_marginTop="38dp"
             android:layout_marginBottom="38dp"
-            android:src="@mipmap/ic_access_logo" />
+            android:src="@mipmap/fire_alarm" />
 
         <TextView
             android:id="@+id/tvNameAlarm"
